--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,3 +53,9 @@ nav a:hover {
 .hide {
     display: none!important;
 }
+
+footer p{
+    margin-top: 100px;
+    font-size: 12px;
+    text-align: center;
+}
